DBZ-962 Avoiding Short constructor